	Edited files /modules/Planner/modulesFunction.php, units_dump.php, units_php

Timetable: made timetable choose appear for users with multiple timetables
	Edited files /modules/Timetable/moduleFunctions.php, tt_space_view.php

Messenger: added auto signature to the bottom of new messages
	Edited files /modules/Messenger/messenger_post.php, moduleFunctions.php

	
v8.1.00
-------
General: added dev indicator in footer, when running cuttingEdge
	Edited file /index.php

Planner: added ability for students to add their own homework tasks
	New table gibbonPlannerEntryStudentHomework
	Edited files /modules/Planner/planner_view_full.php, planner.php, planner_deadlines*.php
	New file /modules/Planner/planner_view_full_myHomeworkProcess.php
	Edited files /index.php, function.php
	Edited file /modules/Students/student_view_details.php

User Admin: improved Rollover to allow preset of student year group and roll group when re-enrolling a student who has already been pre-enrolled. Means individual roll group changes can be set in advance
	Edited file /modules/User Admin/rollover.php

Olden: fixed black lesson planner content
	Edited file /themes/Olden/css/main.css

Timetable Admin: removed duplicate student entries in class count report
	Edited file /modules/Timetable Admin/report_classEnrolment_byRollGroup.php

i18n: fixed issue preventing JavaScript date validation in US language
	Edited value in table gibboni18n
	
Students: fixed icon error in Summary page
	Edited file /modules/Students/student_view_details.php

Individual Needs: minor changes to interface language and field order
	Edited file /modules/Individual Needs/in_edit.php
	Edited file /modules/Students/student_view_details.php

Planner: added new feature to allow weekly email update to parents, giving details of homework and behaviour
	New table gibbonPlannerParentWeeklyEmailSummary
	New values in tables gibbonAction, gibbonPermission
	New folder /cli
	New file /cli/planner_parentWeeklyEmailSummary.php